css/deploy.css
html {
    height: 100%;
}

body {
    padding: 0;
    margin: 0;
    min-height: 100%;
    background-color: #F2F2F2;
}

.modal-window {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 999;
    overflow: auto;
    background-color: rgba(47, 79, 79, 0.6);
    text-align: center;
}

.modal-window .modal-content {
    display: inline-block;
    position: relative;
    max-width: 800px;
    margin: 100px auto auto;
    padding: 30px 10px 0 10px;
    background: white;
    text-align: center;
}

.modal-window .modal-content .close {
    position: absolute;
    top: -5px;
    right: 10px;
    color: #333333;
    font-size: 30px;
    font-weight: bold;
    transition: 0.3s;
    cursor: pointer;
    font-family: sans-serif;
}

.modal-window .modal-content .close:hover {
    color: rgba(0, 0, 0, 0.5);
}

.modal-window .modal-content img {
    max-width: 100%
}

.container {
    display: flex;
    flex-direction: column;
    background: #F2F2F2;
    font-family: sans-serif;
    font-size: 14px;
    margin: 0 8px;
}

.noselect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.options-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 8px;
}

.data-container {
    display: flex;
    flex-direction: column;
    margin-bottom: 16px;
}

.view-options {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-end;
}

.view-options {
    color: #6B6B6B;
    font-size: 12px;
}

.messages {
    position: relative;
    flex-grow: 1;
    margin: 0;
    top: -1px;
    display: flex;
    flex-direction: row;
    width: 100%;
}

.messages .messages-container {
    width: 100%;
    margin: 10px 10px 10px 35px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.messages .messages-container .message-right-part {
    color: grey;
}

.messages.ok {
    background: lightgrey;
    border-bottom: 1px solid grey;
}

.messages.alert {
    background: rgba(255, 129, 14, 0.15);
    border-bottom: 1px solid orange;
}

.messages:before {
    content: '';
    position: absolute;
    width: 20px;
    height: 20px;
    left: 8px;
    top: 8px;
}

.messages.alert:before {
    background: url(../images/alert.png) no-repeat;
}

.messages.error:before {
    background: url(../images/error.png) no-repeat;
}

.messages.error .message-status {
    content: 'ERROR';
}

.messages.ok .messages-container .message-left-part .message-status,
.messages.alert .messages-container .message-left-part .message-status,
.messages.error .messages-container .message-left-part .message-status {
    font-weight: bold;
}

.messages.ok .messages-container .message-left-part .message-status {
    color: #0dbf7f;
}

.messages.error .messages-container .message-left-part .message-status {
    color: red;
}

.messages.error {
    background: rgba(229, 62, 43, 0.15);
    border-bottom: 1px red solid;
}

.custom-dropdown {
    display: flex;
    flex-direction: column;
    width: 250px;
    position: relative;
    background: white;
}

.custom-dropdown ul {
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    background: white;
    color: #2B7AE5;
    width: 100%;
    position: absolute;
    top: 37px;
    z-index: 999;
}

.custom-dropdown ul li {
    list-style-type: none;
    padding: 8px 10px;
    border: 1px solid #e6e6e6;
    border-bottom: none;
    cursor: pointer;
}

.custom-dropdown ul li:hover {
    background: #e6e6e6;
}

.custom-dropdown ul li:last-child {
    border-bottom: 1px solid #e6e6e6;
}

.custom-dropdown .dropdown-button {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    border: 1px solid #e6e6e6;
    /*border-bottom: none;*/
    font-weight: bold;
    color: #6B6B6B;
    position: relative;
    cursor: pointer;
}

.custom-dropdown .dropdown-button div {
    padding: 10px;
}

.custom-dropdown .dropdown-button:after {
    content: '';
    width: 20px;
    height: 15px;
    background: url(../images/arrow.png) no-repeat;
    position: absolute;
    right: 0;
    top: 12px;
}

.custom-dropdown .dropdown-button .chosen-item-text {
    font-weight: normal;
    color: #2B7AE5;
    border-left: 1px solid #e6e6e6;
}

.data-container .resources-list {
    border-bottom: 1px solid #e0e0e0;
    border-top: 1px solid #e0e0e0;
}

.data-container .resources-list .resource-row {
    display: flex;
    flex-direction: column;
}

.data-container .resources-list .resource-row .view-row {
    display: flex;
    flex-direction: row;
    border-top: 1px solid #e0e0e0;
    padding: 10px;
    cursor: pointer;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.data-container .resources-list .resource-row:last-child .view-row {
    border-bottom: 1px solid #e0e0e0;
}

.data-container .resources-list .resource-row .view-row .type,
.data-container .resources-list .resource-row .view-row .name,
.data-container .resources-list .resource-row .view-row .action,
.data-container .resources-list .resource-row .view-row .status-timestamp,
.data-container .resources-list .resource-row .view-row .status {
    word-wrap: break-word;
    box-sizing: border-box;
    padding: 0 10px;
}

.data-container .resources-list .resource-row .view-row .type {
    width: 25%;
    max-width: 25%;
}

.data-container .resources-list .resource-row .view-row .name {
    width: 25%;
    max-width: 25%;
    color: #2B7AE5;
}

.data-container .resources-list .resource-row .view-row .action {
    width: 15%;
    max-width: 15%;
}

.data-container .resources-list .resource-row .view-row .status {
    width: 15%;
    max-width: 15%;
    font-weight: bold;
}

.data-container .resources-list .resource-row .view-row.error-status .status,
.data-container .resources-list .resource-row .view-row.error-status .action,
.data-container .resources-list .resource-row .view-row.error-status .name {
    color: #E53E2B;
}

.data-container .resources-list .resource-row .view-row.stable-status .status {
    color: #0DBF7F;
}

.data-container .resources-list .resource-row .view-row .status-timestamp {
    width: 20%;
    text-align: right;
    color: #6B6B6B;
}

.data-container .resources-list .resource-row .expandable-row {
    background: #f2f2f2;
    margin: 5px;
    padding: 0px 15px;
}

.data-container .resources-list .resource-row .expandable-row .message {
    display: flex;
    flex-direction: row;
    padding: 20px 0;
    border-bottom: 1px solid #e0e0e0;
}

.data-container .resources-list .resource-row .expandable-row .message .error-title {
    display: flex;
    width: 35%;
    flex-direction: column;
    justify-content: space-around;
}

.data-container .resources-list .resource-row .expandable-row .message .resource-error-description {
    display: flex;
    width: 75%;
}

.data-container .resources-list .resource-row .expandable-row .message .error-title .name {
    font-weight: bold;
}

.data-container .resources-list .resource-row .expandable-row .message .error-title .code {
}

.data-container .resources-list .resource-row .expandable-row .logs {
    display: flex;
    flex-direction: row;
    padding: 20px 0;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output {
    width: 50%;
    color: #333333;
    word-break: break-all;
    margin: 0 10px;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output .label {
    font-style: italic;
    padding: 2px 0;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output .error .label {
    color: #E53E2B;
    font-weight: bold;
    font-style: normal;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output .error .error-label {
    font-weight: bold;
    font-style: normal;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output .input-record {
    font-weight: bold;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output .input-record span {
    font-weight: normal;
}

.custom-radio-btns-group {
    /*margin: 10px;*/
}

.custom-radio-btns-group .resource-type-toggle {
    margin: 0;
    padding: 11px 0;
    display: flex;
}

.custom-radio-btns-group .custom-radio-button {
    font-weight: 700;
    font-style: normal;
    font-size: 14px;
    color: #6B6B6B;
    cursor: pointer;
    margin-left: 8px;
    min-width: 140px;
    text-transform: uppercase;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.custom-radio-btns-group .custom-radio-button:before {
    content: '';
    background: url(../images/radio-btrn.png) 0 0;
    padding: 0 8px;
    position: relative;
    left: -5px;
    top: 0;
}

.custom-radio-btns-group .custom-radio-button.active:before {
    background-position: 0 16px;
}

.custom-radio-btns-group .custom-radio-button input {
    display: none;
}

.v-hidden {
    visibility: hidden !important;
}

.hidden {
    display: none !important;
}

@media screen and (max-width: 1024px) {
    .options-container {
        justify-content: space-between;
    }
}

@media screen and (max-width: 600px) {
    .options-container {
        flex-direction: column;
    }

    .custom-dropdown {
        width: 100%;
        max-width: 100%;
    }

    .custom-radio-btns-group .custom-radio-button {
        line-height: normal;
        min-width: inherit;
        margin-right: 20px;
    }

    .custom-radio-btns-group {
        margin: 10px 20px;
    }

    .options-container {
        margin: 0;
    }

    .data-container .resources-list .resource-row .view-row {
        flex-direction: column;
        position: relative;
    }

    .data-container .resources-list .resource-row .view-row .action,
    .data-container .resources-list .resource-row .view-row .status {
        position: absolute;
        right: 0;
        text-align: right;
        margin: 10px 0;
    }

    .data-container .resources-list .resource-row .view-row .status {
        top: 0;
        margin: 0;
    }

    .data-container .resources-list .resource-row .view-row .status-timestamp {
        text-align: left;
    }

    .data-container .resources-list .resource-row .view-row .type,
    .data-container .resources-list .resource-row .view-row .name,
    .data-container .resources-list .resource-row .view-row .action,
    .data-container .resources-list .resource-row .view-row .status,
    .data-container .resources-list .resource-row .view-row .status-timestamp {
        width: 100%;
        max-width: 100%;
    }

    .data-container .resources-list .resource-row .expandable-row .logs {
        flex-direction: column;
        padding: 0;
    }

    .data-container .resources-list .resource-row .expandable-row .logs .logs-output {
        margin: 10px 0;
    }

    .data-container .resources-list .resource-row .expandable-row .logs .logs-input,
    .data-container .resources-list .resource-row .expandable-row .logs .logs-output {
        width: 100%;
    }
}

